companyList 코드 안정화 - 나세호